# 3DP

./: .dockerignore  .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SUDO_FREE_UPGRADE.md  TC_CANDIDATES_PALLET.md  TestingPlan.md  VESTED_TRANSFER_TO_TREASURY.md  WITHDRAW_ASSETS.md  bun.lockb  docker-compose.override.yml.example  docker-compose.yml  ecosystem.config.js  keygen.sh  keygen_seed.sh  mainnetSpecRaw.json  miner.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  spec.json  ss58-registry.json  testnetSpecRaw.json  testnetSpecRaw2.json  testnetSpecRaw3.json  testnetSpecRawOld.json
.github/workflows/: codeball.yml  rust.yml  updater.yml
consensus/frontier/: Cargo.toml
consensus/frontier/src/: lib.rs
consensus/poscan/: Cargo.toml  README.md
consensus/poscan/src/: lib.rs  worker.rs
consensus/poscan_algo/: Cargo.toml
consensus/poscan_algo/src/: lib.rs
consensus/poscan_grid2d/: Cargo.toml
consensus/poscan_grid2d/src/: lib.rs
consensus/sha3pow/: Cargo.toml
consensus/sha3pow/src/: lib.rs
convert/: scan.mjs  slash.mjs
convert/lib/: config.mjs  models.mjs
docker/: miner.Dockerfile  node.Dockerfile  node.sh
frame/difficulty/: Cargo.toml
frame/difficulty/src/: lib.rs
frame/lockdrop/: Cargo.toml
frame/lockdrop/src/: default_weights.rs  lib.rs
frame/rewards/: Cargo.toml
frame/rewards/src/: benchmarking.rs  default_weights.rs  lib.rs  tests.rs
frontier/cli/: Cargo.toml
frontier/db/: Cargo.toml
frontier/db/src/: lib.rs  parity_db_adapter.rs  upgrade.rs  utils.rs
frontier/mapping-sync/: Cargo.toml
frontier/rpc/: Cargo.toml
frontier/rpc-core/src/: web3.rs
frontier/rpc/src/: eth_pubsub.rs  net.rs  web3.rs
frontier/rpc/src/eth/: client.rs
frontier/rpc/src/overrides/: schema_v3_override.rs
miner-libs/: Perlin.js  rock.js  rock_obj.js  scrape.js  sphere.js
nodes/poscan-consensus/: Cargo.toml
nodes/poscan-consensus/src/: chain_spec.rs  cli.rs  command.rs  main.rs  mining_rpc.rs  pool.rs  pool_rpc.rs  poscan_rpc.rs  rpc.rs  service.rs  tc_candidates_rpc.rs
pallets/asset-conversion/: Cargo.toml  README.md
pallets/asset-conversion/src/: lib.rs  weights.rs
pallets/asset-rate/: Cargo.toml
pallets/asset-rate/src/: lib.rs  weights.rs
pallets/atomic-swap/: Cargo.toml
pallets/atomic-swap/src/: lib.rs
pallets/base-fee/: Cargo.toml
pallets/difficulty/: Cargo.toml  types.json
pallets/difficulty/src/: lib.rs
pallets/dynamic-fee/: Cargo.toml
pallets/ethereum/: Cargo.toml
pallets/evm/: CHANGELOG.md  Cargo.toml
pallets/evm-chain-id/: Cargo.toml
pallets/evm-chain-id/src/: lib.rs
pallets/evm/src/: lib.rs
pallets/evm/test-vector-support/: Cargo.toml
pallets/hotfix-sufficients/: Cargo.toml
pallets/identity/: Cargo.toml
pallets/identity/src/: lib.rs  weights.rs
pallets/im-online/: Cargo.toml
pallets/im-online/src/: lib.rs
pallets/lockdrop/: Cargo.toml
pallets/lockdrop/src/: lib.rs
pallets/mining-pool/: Cargo.toml  readme.md
pallets/mining-pool/src/: lib.rs
pallets/poscan/: Cargo.toml  README.md
pallets/poscan-assets/: Cargo.toml  README.md
pallets/poscan-assets/src/: benchmarking.rs  extra_mutator.rs  functions.rs  impl_fungibles.rs  impl_stored_map.rs  lib.rs  mock.rs  swap.rs  tests.rs  types.rs  weights.rs
pallets/poscan/src/: inherents.rs  lib.rs  lib.rs_  lib.rs__
pallets/referenda/: Cargo.toml
pallets/referenda/src/: lib.rs  types.rs
pallets/rewards/: Cargo.toml  types.json
pallets/rewards/src/: default_weights.rs  lib.rs  migrations.rs  mock.rs
pallets/serial-numbers/: Cargo.toml  README.md
pallets/serial-numbers/src/: lib.rs  mock.rs  tests.rs
pallets/tc-candidates/: Cargo.toml
pallets/tc-candidates/src/: README.md  lib.rs  mock.rs  tests.rs
pallets/validator-set/: Cargo.toml  README.md
pallets/validator-set/src/: lib.rs
precompiles/assets-conversion/: Cargo.toml  LiquidityProvider.sol  Pairs.sol  README.md  Swap.sol
precompiles/assets-conversion/src/: lib.rs  mock.rs
precompiles/assets-erc20/: Cargo.toml  LocalAsset.sol
precompiles/assets-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/batch/: Cargo.toml
precompiles/batch/src/: lib.rs  mock.rs  tests.rs
precompiles/call-permit/: Cargo.toml
precompiles/call-permit/src/: lib.rs  mock.rs
precompiles/identity/: Cargo.toml  Identity.sol  README.md
precompiles/identity/src/: lib.rs  mock.rs
precompiles/poscan/: 3DPRC2.sol  Cargo.toml  I3DPRC2.sol  QCInspection.sol  README.md
precompiles/poscan/src/: lib.rs
precompiles/proxy/: Cargo.toml
precompiles/proxy/src/: lib.rs  mock.rs  tests.rs
precompiles/serial-numbers/: Cargo.toml  SerialNumbers.sol
precompiles/serial-numbers/src/: lib.rs  mock.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/src/: costs.rs  handle.rs  lib.rs  logs.rs  modifier.rs  precompile_set.rs  revert.rs  solidity.rs  substrate.rs  testing.rs  tests.rs
primitives/consensus/evm/: Cargo.toml
primitives/consensus/kulupu/: Cargo.toml
primitives/consensus/poscan/: Cargo.toml  README.md
primitives/dynamic-fee/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/rpc/: Cargo.toml
primitives/self-contained/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: algo.rs  check.rs  fee.rs  genesis.rs  lib.rs  precompiles.rs
runtime/src/weights/: rewards.rs
runtimes/minimal-grandpa-runtime/: Cargo.toml
runtimes/minimal-grandpa-runtime/src/: fee.rs  genesis.rs  lib.rs
runtimes/poscan-runtime/: Cargo.toml  aggregate_types.js  types.json
runtimes/poscan-runtime/src/: fee.rs  genesis.rs  lib.rs
traits/account-set/: Cargo.toml
traits/mining-pool/: Cargo.toml
traits/mining-pool/src/: lib.rs
traits/poscan/: Cargo.toml
traits/poscan/src/: lib.rs
traits/rewards/: Cargo.toml
traits/rewards/src/: lib.rs
traits/serial-numbers/: Cargo.toml
traits/serial-numbers/src/: lib.rs
traits/validator-set/: Cargo.toml
(+48 files in other folders)
