[workspace]
members = [
	"pallets/basic-token",
	"pallets/charity",
	"pallets/check-membership",
	"pallets/compounding-interest",
	"pallets/constant-config",
	"pallets/currency-imbalances",
	"pallets/default-instance",
	"pallets/double-map",
	"pallets/fixed-point",
	"pallets/generic-event",
	"pallets/hello-substrate",
	"pallets/last-caller",
	"pallets/lockable-currency",
	"pallets/map-set",
	"pallets/ocw-demo",
	"pallets/randomness",
	"pallets/reservable-currency",
	"pallets/ringbuffer-queue",
	"pallets/simple-crowdfund",
	"pallets/simple-event",
	"pallets/simple-map",
	"pallets/storage-cache",
	"pallets/struct-storage",
	"pallets/sum-storage",
	"pallets/vec-set",
	"pallets/weights",
	"runtimes/poscan-runtime",
	"nodes/poscan-consensus",
    "consensus/poscan_grid2d",
	"traits/account-set",
	"consensus/poscan",
	"pallets/poscan",
	"primitives/consensus/poscan",

	"frame/rewards",
	"frame/lockdrop",
]
librocksdb-sys = "6.17.3"
