[package]
name = "poscan-runtime"
version = "4.0.0"
edition = "2021"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A runtime that manages a set of grandpa authorities and supplies them to the client"
license = "GPL-3.0-or-later"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { default-features = false, version = '0.4.17'}
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
smallvec = "1.4.0"
static_assertions = "1.1.0"

pallet-authorship = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-authorship", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-balances", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-support", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-sudo", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-system", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-try-runtime", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-transaction-payment", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-executive", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-api", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-block-builder", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-core", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-io", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-inherents", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-offchain", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-runtime", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-session", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-std", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-transaction-pool", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "sp-version", default-features = false }

sp-finality-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-child-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-democracy = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-identity = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-indices = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-multisig = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-preimage = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-whitelist = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
# pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-vesting = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-scored-pool = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-transaction-storage = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-remark = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-uniques = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-conviction-voting = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-elections-phragmen = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-ranked-collective = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }

pallet-validator-set = { path = "../pallets/validator-set", default-features = false }
pallet-atomic-swap = { path = "../pallets/atomic-swap", default-features = false }
pallet-mining-pool = { path = "../pallets/mining-pool", default-features = false }
mining-pool-stat-api = { path = "../traits/mining-pool", default-features = false }
poscan-api = { path = "../traits/poscan", default-features = false }
difficulty = { package = "pallet-difficulty", path = "../pallets/difficulty", default-features = false }
rewards = { package = "pallet-rewards", path = "../pallets/rewards", default-features = false }
pallet-referenda = { default-features = false, path = "../pallets/referenda" }
pallet-asset-rate = { default-features = false, path = "../pallets/asset-rate" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false, package = "frame-benchmarking", optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", default-features = false, package = "frame-system-benchmarking", optional = true }
hex-literal = { version = "0.3.4", optional = true }
array-bytes = { version = "6.1.0" }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "pallet-contracts-rpc-runtime-api", default-features = false }

pallet-asset-conversion = { version = "4.0.0-dev", default-features = false, path = "../pallets/asset-conversion" }

sp-consensus-poscan = { path = "../primitives/consensus/poscan", default-features = false }
pallet-poscan = { path = "../pallets/poscan", default-features = false }
pallet-poscan-assets = { path = "../pallets/poscan-assets", default-features = false }

p3d = { version="0.7.0", git="https://github.com/3Dpass/p3d", rev="5eed8192" }

[build-dependencies]
substrate-wasm-builder = { version = "10"} # { git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7", package = "substrate-wasm-builder" }

[features]
default = [
	"std",
	# temporarily enable unstable contracts features by default, remove this before using on a production chain.
	"contracts-unstable-interface",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",

	"pallet-grandpa/std",
	"pallet-treasury/std",
	"pallet-collective/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"sp-arithmetic/std",
	"sp-consensus-poscan/std",

	"pallet-democracy/std",
	"pallet-identity/std",
	"pallet-indices/std",
	"pallet-multisig/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	# "pallet-tips/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	"pallet-recovery/std",
	"pallet-transaction-storage/std",
	"pallet-scored-pool/std",
	"pallet-remark/std",
	# "pallet-assets/std",
	"pallet-uniques/std",
	"pallet-asset-conversion/std",
	"pallet-session/std",
	"pallet-im-online/std",
	# "pallet-offences/std",
	"pallet-referenda/std",
	"pallet-asset-rate/std",
	"pallet-membership/std",
	"pallet-conviction-voting/std",
	"pallet-elections-phragmen/std",
	"pallet-ranked-collective/std",
	"pallet-validator-set/std",
	"pallet-mining-pool/std",
	"pallet-poscan/std",
	"pallet-poscan-assets/std",
	"difficulty/std",
	"rewards/std",
	# "lockdrop/std",
	"poscan-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]

# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]
