[package]
name = "sc-consensus-poscan"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoW consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sc-client-api = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sc-consensus = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-core = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-blockchain = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-runtime = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-api = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-block-builder = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-inherents = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-consensus-poscan = { package = "sp-consensus-poscan", path = "../../primitives/consensus/poscan" }
poscan-runtime = { path = "../../runtimes/poscan-runtime" }
sp-consensus = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-application-crypto = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-timestamp = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
# frame-support = { version = "3.0" }
# frame-system = { version = "3.0" }
async-trait = "0.1.50"
log = "0.4"
futures = { version = "0.3", features = ["compat"] }
futures-timer = "3.0"
parking_lot = "0.12"
derive_more = "0.99"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
