[package]
name = "sc-consensus-poscan"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoW consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/substrate"}
sc-consensus = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-finality-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-consensus-poscan = { package = "sp-consensus-poscan", path = "../../primitives/consensus/poscan" }
sp-consensus = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate"}
async-trait = "0.1.50"
log = "0.4"
futures = { version = "0.3", features = ["compat"] }
futures-timer = "3.0"
parking_lot = "0.12"
derive_more = "0.99"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-inherents/std",
    "sp-finality-grandpa/std",
    "sp-consensus-poscan/std",
    #"poscan-runtime/std",
    "sp-application-crypto/std",
    "sp-timestamp/std",
    "sp-std/std",
]