[package]
name = 'poscan-grid2d'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'Sha3-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = '3.1', default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
sha3 = "0.9"

# Substrate packages
sc-consensus-poscan = { version = "0.9", package = "sc-consensus-poscan", path = "../../consensus/poscan" }
sp-api = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-consensus-poscan = { version = "0.9", path = "../../primitives/consensus/poscan" }
sp-core = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
sp-runtime = { git = "https://github.com/3Dpass/substrate.git", tag = "monthly-2022-05" }
# frame-support = { version = "3.0" }
# frame-system = { version = "3.0" }
log = "0.4"

p3d = { git = "https://github.com/3Dpass/p3d", branch = "main" }
