[package]
name = 'poscan-grid2d'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'Sha3-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = '3.1', default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sha3 = "0.9"

# Substrate packages
sc-consensus-poscan = { default-features = false, version = "0.9", package = "sc-consensus-poscan", path = "../../consensus/poscan" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-consensus-poscan = { default-features = false, version = "0.9", path = "../../primitives/consensus/poscan" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "b0777b4c7f7" }
poscan-algo = { default-features = false, path = "../../consensus/poscan_algo", optional = true }
log = "0.4"
randomx-rs = "1.3.0"

p3d = { version="0.7.0", git="https://github.com/3Dpass/p3d", rev="5eed8192" }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "parity-scale-codec/std",
    "sc-consensus-poscan/std",
    "sp-api/std",
    "sp-consensus-poscan/std",
    "sp-core/std",
    "sp-runtime/std",
    "poscan-algo",
]
